@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.120 2001/07/18 09:50:48 stelian Exp $
+$Id: CHANGES,v 1.121 2001/07/18 11:46:31 stelian Exp $
 
 Changes between versions 0.4b22 and 0.4b23 (released ????????????)
 ==================================================================
@@ -25,6 +25,9 @@ Changes between versions 0.4b22 and 0.4b23 (released ????????????)
 	_compressed_ output per volume if compression is on.
 	Patch contributed by Helmut Jarausch 
 	<jarausch@igpm.rwth-aachen.de>.
+
+7.	Fixed a bug in reading the operator typed file/tape path for
+	the next volume in restore.
 
 Changes between versions 0.4b21 and 0.4b22 (released May 12, 2001)
 ==================================================================
